--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,15 +16,26 @@
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+    <style>
+      body {
+        background: #111111;
+      }
+    
+      a {
+        color: #33ffcc;
+      }
+      
+      a:hover {
+        color: #33ffcc;
+        text-decoration: underline;
+      }
+    </style>
   </head>
   <body>
       <div id="header" style="background: url('https://raw.githubusercontent.com/shagu/{{ site.github.repository_name }}/master/_layouts/bgtop.png'); background-color: #000000 !important;">
         <nav>
-          <div id="title">
-            <a href="/{{ site.github.repository_name }}"><img src='https://raw.githubusercontent.com/shagu/{{ site.github.repository_name }}/master/_layouts/logo.png'></a>
-            <h2>{{ site.description | default: site.github.project_tagline }}</h2>
-          </div>
-          
+          <a href="/{{ site.github.repository_name }}" style="float:right;"><img src='https://raw.githubusercontent.com/shagu/{{ site.github.repository_name }}/master/_layouts/logo.png'></a>
+
           {% if page.url != '/' %}
           <a href="/{{ site.github.repository_name }}" class="btn" style="float: left; background-color: #111111;">&lt; Back</a>
           <a href="https://github.com/shagu{{ page.url }}" class="btn" style="float: left; background-color: #111111;">Show on GitHub</a>
