add padding to images

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,6 +48,10 @@
         float: left;
       }
 
+      img {
+        padding: 2px;
+      }
+
       a.btn:hover {
         border: 1px #aaaaaa solid; 
         color: #ffffff;
@@ -62,6 +66,7 @@
         padding: 1px;
         border: 1px #444444 solid;
         text-decoration: none;
+        display: inline-block;
       }
 
       a.imgbtn:hover {
