adjust image paddings

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
       }
 
       img {
-        padding: 2px;
+        padding: 0px 5px 5px 0px;
       }
 
       a.btn:hover {
@@ -62,15 +62,12 @@
         fill: #cccccc;
       }
       
-      a.imgbtn {
+      a.imgbtn img{
         padding: 1px;
-        border: 1px #444444 solid;
-        text-decoration: none;
-        display: inline-block;
+        margin: 1px
       }
 
-      a.imgbtn:hover {
-        padding: 1px;
+      a.imgbtn img:hover {
         border: 1px #33ffcc solid;
       }
     </style>
