use borders on all image links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,12 +62,13 @@
         fill: #cccccc;
       }
       
-      a.imgbtn img{
+      a img{
         padding: 1px;
         margin: 1px
+        border: 1px #aaaaaa solid;
       }
 
-      a.imgbtn img:hover {
+      a img:hover {
         border: 1px #33ffcc solid;
       }
     </style>
