fix css syntax error

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,9 +62,9 @@
         fill: #cccccc;
       }
       
-      a img{
+      a img {
         padding: 1px;
-        margin: 1px
+        margin: 1px;
         border: 1px #aaaaaa solid;
       }
 
