--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,29 +21,29 @@
         background: #111111;
         color: #cccccc;
       }
-    
+
       a {
         color: #33ffcc;
       }
-      
+
       a:hover {
         color: #33ffcc;
         text-decoration: underline;
       }
-      
+
       #header {
         background: url('https://raw.githubusercontent.com/shagu/{{ site.github.repository_name }}/master/_layouts/bgtop.png');
-        background-color: #000000 !important; 
+        background-color: #000000 !important;
         border-bottom: 1px solid #33ffcc;
         height: 75px;
       }
-      
+
       a.btn {
-        background-color: #111111; 
-        display: inline-block; 
-        border: 1px #444444 solid; 
+        background-color: #111111;
+        display: inline-block;
+        border: 1px #444444 solid;
         color: #aaaaaa;
-        padding: 5px 10px; 
+        padding: 5px 10px;
         margin: 12px 0px 12px 3px;
         float: left;
       }
@@ -53,11 +53,11 @@
       }
 
       a.btn:hover {
-        border: 1px #aaaaaa solid; 
+        border: 1px #aaaaaa solid;
         color: #ffffff;
         text-decoration: none;
       }
-           
+
       svg.octicon {
         fill: #cccccc;
       }
@@ -66,9 +66,9 @@
   <body>
       <div id="header">
         <nav>
-          <a href="/" style="float:right;"><img src='https://raw.githubusercontent.com/shagu/{{ site.github.repository_name }}/master/_layouts/logo.png'></a>
+          <a href="//" style="float:right;"><img src='https://raw.githubusercontent.com/shagu/{{ site.github.repository_name }}/master/_layouts/logo.png'></a>
           {% if page.url != '/' %}
-          <a href="/" class="btn">&laquo; Home</a>
+          <a href="//" class="btn">&laquo; Home</a>
           {% endif %}
           <a href="https://github.com/shagu{{ page.url }}" class="btn"><svg height="12" class="octicon octicon-mark-github" viewBox="0 0 16 16" version="1.1" width="12" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path></svg> GitHub</a>
         </nav>
@@ -77,10 +77,10 @@
     <div class="wrapper">
 
       <section>
-        {% if page.url != '/' %}       
+        {% if page.url != '/' %}
 
         {% endif %}
-          
+
         {{ content }}
 
       </section>
