--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,11 +100,9 @@
         display: inline-block;
         border: 1px #444444 solid;
         color: #aaaaaa;
-        padding: 5px 5px 5px 50px;
-        margin: 5px 20px;
+        padding: 10px 10px 10px 40px;
+        margin: 5px 20px 10px 20px;
         width: 200px;
-        text-align: center;
-        vertical-align: center;
 
         background-repeat: no-repeat !important;
         background-position: 5px 5px !important;
