--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -105,7 +105,7 @@
         width: 200px;
 
         background-repeat: no-repeat !important;
-        background-position: 2px 2px !important;
+        background-position: left !important;
       }
 
       a.dl:hover {
