layout: change button layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -99,10 +99,10 @@
         background-color: #111111;
         display: inline-block;
         border: 1px #444444 solid;
-        color: #aaaaaa;
-        padding: 12px 12px 12px 52px;
-        margin: 5px 20px 10px 20px;
-        width: 200px;
+        color: #ffffff;
+        padding: 10px 10px 10px 55px;
+        margin: 5px 10px 15px 10px;
+        width: 220px;
 
         background-repeat: no-repeat !important;
         background-position: left !important;
@@ -110,7 +110,7 @@
 
       a.dl:hover {
         border: 1px #aaaaaa solid;
-        color: #ffffff;
+        color: #33ffcc;
         text-decoration: none;
       }
 
