--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -136,10 +136,10 @@
 
       span#releasespan {
         display: block;
-        padding: 10px;
+        padding: 5px 10px 10px 10px;
         color: #aaaaaa;
         font-style: italic;
-        text-align: center;
+        text-align: left;
       }
 
       span#releasedate {
