layout: color download buttons border on hover

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -120,7 +120,7 @@
       }
 
       a.dl:hover {
-        border: 1px #ffffff solid;
+        border: 1px #33ffcc solid;
         color: #33ffcc;
         text-decoration: none;
       }
