layout: reduce button hover brightness

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,7 +85,7 @@
         background-color: #111111;
         display: inline-block;
         border: 1px #444444 solid;
-        color: #aaaaaa;
+        color: #888888;
         padding: 5px 10px;
         margin: 12px 0px 12px 3px;
         float: left;
@@ -120,7 +120,7 @@
       }
 
       a.dl:hover {
-        border: 1px #33ffcc solid;
+        border: 1px #888888 solid;
         color: #33ffcc;
         text-decoration: none;
       }
