layout: adjust font colors

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -110,7 +110,7 @@
         background-color: #111111;
         display: inline-block;
         border: 1px #444444 solid;
-        color: #ffffff;
+        color: #cccccc;
         padding: 10px 10px 10px 55px;
         margin: 5px 10px 15px 10px;
         width: 220px;
@@ -121,7 +121,7 @@
 
       a.dl:hover {
         border: 1px #888888 solid;
-        color: #33ffcc;
+        color: #ffffff;
         text-decoration: none;
       }
 
@@ -144,7 +144,7 @@
 
       span#releasedate {
         font-style: normal;
-        color: #ffffff;
+        color: #cccccc;
       }
 
     </style>
