--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -103,6 +103,8 @@
 
       svg.gitlab {
         fill: #cccccc;
+        margin-right: 3px;
+        margin-bottom: -3px;
       }
 
       /* pfQuest Download Buttons */
@@ -165,7 +167,7 @@
             <svg version="1.1" id="Layer_1" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns"
              xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 500 500"
              style="enable-background:new 0 0 500 500;" xml:space="preserve"
-             class="gitlab" height="12" viewBox="0 0 16 16" width="12">
+             class="gitlab" height="16" viewBox="0 0 16 16" width="16">
               <path id="path50" class="st0" d="M249.9,476.8L249.9,476.8l90.7-279.1H159.2L249.9,476.8L249.9,476.8z"/>
               <path id="path66" class="st0" d="M32.1,197.7L32.1,197.7L4.5,282.5c-2.5,7.7,0.2,16.2,6.8,21l238.5,173.3L32.1,197.7L32.1,197.7z"/>
               <path id="path74" class="st0" d="M32.1,197.7h127.1L104.6,29.6c-2.8-8.6-15-8.6-17.9,0L32.1,197.7L32.1,197.7z"/>
