layout: add border to imagelinks

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,14 @@
         text-decoration: underline;
       }
 
+      a img {
+        border: 1px #444444 solid;
+      }
+
+      a img#hover {
+        border: 1px #aaaaaa solid;
+      }
+
       #header {
         background: url('https://raw.githubusercontent.com/shagu/{{ site.github.repository_name }}/master/_layouts/bgtop.png');
         background-color: #000000 !important;
