layout: change image border appearance

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,10 +32,12 @@
       }
 
       a img {
+        margin: 10px;
+        padding: 0px;
         border: 1px #444444 solid;
       }
 
-      a img#hover {
+      a#hover img {
         border: 1px #aaaaaa solid;
       }
 
