layout: apply borders only in texts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,13 +31,13 @@
         text-decoration: underline;
       }
 
-      a img {
-        margin: 10px;
+      p a img {
+        margin: 2px;
         padding: 0px;
         border: 1px #444444 solid;
       }
 
-      a#hover img {
+      p a#hover img {
         border: 1px #aaaaaa solid;
       }
 
