layout: add hover effect to images

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,11 +34,11 @@
       p a img {
         margin: 2px;
         padding: 0px;
-        border: 1px #444444 solid;
+        border: 1px #333333 solid;
       }
 
-      p a#hover img {
-        border: 1px #aaaaaa solid;
+      p a img#hover {
+        border: 1px #33ffcc solid;
       }
 
       #header {
