--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
         border: 1px #333333 solid;
       }
 
-      p a img#hover {
+      p a:hover > img {
         border: 1px #33ffcc solid;
       }
 
