layout: white border on hover

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
       }
 
       p a:hover > img {
-        border: 1px #33ffcc solid;
+        border: 1px #ffffff solid;
       }
 
       #header {
