layout: reduce border color

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
       }
 
       p a:hover > img {
-        border: 1px #ffffff solid;
+        border: 1px #888888 solid;
       }
 
       #header {
