--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,10 +68,8 @@
         text-decoration: none;
       }
 
-      svg.gitlab {
+      svg.octicon {
         fill: #cccccc;
-        margin-right: 3px;
-        margin-bottom: -3px;
       }
 
       span#releasespan {
@@ -96,19 +94,7 @@
           {% if page.url != '/' %}
           <a href="{{ site.url }}//" class="btn">&laquo; Home</a>
           {% endif %}
-          <a href="https://gitlab.com/shagu{{ page.url }}" class="btn">
-            <svg version="1.1" id="Layer_1" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns"
-             xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 500 500"
-             style="enable-background:new 0 0 500 500;" xml:space="preserve"
-             class="gitlab" height="16" viewBox="0 0 16 16" width="16">
-              <path id="path50" class="st0" d="M249.9,476.8L249.9,476.8l90.7-279.1H159.2L249.9,476.8L249.9,476.8z"/>
-              <path id="path66" class="st0" d="M32.1,197.7L32.1,197.7L4.5,282.5c-2.5,7.7,0.2,16.2,6.8,21l238.5,173.3L32.1,197.7L32.1,197.7z"/>
-              <path id="path74" class="st0" d="M32.1,197.7h127.1L104.6,29.6c-2.8-8.6-15-8.6-17.9,0L32.1,197.7L32.1,197.7z"/>
-              <path id="path82" class="st0" d="M467.6,197.7L467.6,197.7l27.6,84.8c2.5,7.7-0.2,16.2-6.8,21L249.9,476.8L467.6,197.7L467.6,197.7z"/>
-              <path id="path86" class="st0" d="M467.6,197.7H340.5l54.6-168.1c2.8-8.6,15-8.6,17.9,0L467.6,197.7L467.6,197.7z"/>
-            </svg>
-             GitLab
-          </a>
+          <a href="https://github.com/shagu{{ page.url }}" class="btn"><svg height="12" class="octicon octicon-mark-github" viewBox="0 0 16 16" version="1.1" width="12" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path></svg> GitHub</a>
         </nav>
       </div>
 
