--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,122 +1,136 @@
 <!doctype html>
 <html lang="{{ site.lang | default: "en-US" }}">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-{% seo %}
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="{{ '/assets/js/respond.js' | relative_url }}"></script>
-    <!--[if lt IE 9]>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+  {% seo %}
+  <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script src="{{ '/assets/js/respond.js' | relative_url }}"></script>
+  <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <!--[if lt IE 8]>
+  <!--[if lt IE 8]>
     <link rel="stylesheet" href="{{ '/assets/css/ie.css' | relative_url }}">
     <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <style>
-      body {
-        background: #111111;
-        color: #cccccc;
-      }
+  <style>
+    body {
+      background: #111111;
+      color: #cccccc;
+      font-size: 1em;
+    }
 
-      a {
-        color: #33ffcc;
-      }
+    a {
+      color: #33ffcc;
+    }
 
-      a:hover {
-        color: #33ffcc;
-        text-decoration: underline;
-      }
+    a:hover {
+      color: #33ffcc;
+      text-decoration: underline;
+    }
 
-      p a img {
-        margin: 2px;
-        padding: 0px;
-        border: 1px #333333 solid;
-      }
+    p a img {
+      margin: 2px;
+      padding: 0px;
+      border: 1px #333333 solid;
+    }
 
-      p a:hover > img {
-        border: 1px #888888 solid;
-      }
+    p a:hover>img {
+      border: 1px #888888 solid;
+    }
 
-      #header {
-        background: url('https://raw.githubusercontent.com/shagu/{{ site.github.repository_name }}/master/_layouts/bgtop.png');
-        background-color: #000000 !important;
-        border-bottom: 1px solid #33ffcc;
-        height: 75px;
-      }
+    #header {
+      background: url('https://raw.githubusercontent.com/shagu/{{ site.github.repository_name }}/master/_layouts/bgtop.png');
+      background-color: #000000 !important;
+      border-bottom: 1px solid #33ffcc;
+      height: 75px;
+    }
 
-      a.btn {
-        background-color: #111111;
-        display: inline-block;
-        border: 1px #444444 solid;
-        color: #888888;
-        padding: 5px 10px;
-        margin: 12px 0px 12px 3px;
-        float: left;
-      }
+    a.btn {
+      background-color: #111111;
+      display: inline-block;
+      border: 1px #444444 solid;
+      color: #888888;
+      padding: 5px 10px;
+      margin: 12px 0px 12px 3px;
+      float: left;
+    }
 
-      img {
-        padding: 0px 5px 5px 0px;
-      }
+    img {
+      padding: 0px 5px 5px 0px;
+    }
 
-      a.btn:hover {
-        border: 1px #aaaaaa solid;
-        color: #ffffff;
-        text-decoration: none;
-      }
+    a.btn:hover {
+      border: 1px #aaaaaa solid;
+      color: #ffffff;
+      text-decoration: none;
+    }
 
-      svg.octicon {
-        fill: #cccccc;
-      }
+    svg.octicon {
+      fill: #cccccc;
+    }
 
-      span#releasespan {
-        display: block;
-        padding: 5px 10px 10px 10px;
-        color: #aaaaaa;
-        font-style: italic;
-        text-align: left;
-      }
+    span#releasespan {
+      display: block;
+      padding: 5px 10px 10px 10px;
+      color: #aaaaaa;
+      font-style: italic;
+      text-align: left;
+    }
 
-      span#releasedate {
-        font-style: normal;
-        color: #cccccc;
-      }
+    span#releasedate {
+      font-style: normal;
+      color: #cccccc;
+    }
+  </style>
+</head>
 
-    </style>
-  </head>
-  <body>
-      <div id="header">
-        <nav>
-          <a href="{{ site.url }}//" style="float:right;"><img src='https://raw.githubusercontent.com/shagu/{{ site.github.repository_name }}/master/_layouts/logo.png'></a>
-          {% if page.url != '/' %}
-          <a href="{{ site.url }}//" class="btn">&laquo; Home</a>
-          {% endif %}
-          <a href="https://github.com/shagu{{ page.url }}" class="btn"><svg height="12" class="octicon octicon-mark-github" viewBox="0 0 16 16" version="1.1" width="12" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path></svg> GitHub</a>
-        </nav>
-      </div>
+<body>
+  <div id="header">
+    <nav>
+      <a href="{{ site.url }}//" style="float:right;"><img src='https://raw.githubusercontent.com/shagu/{{ site.github.repository_name }}/master/_layouts/logo.png'></a>
+      {% if page.url != '/' %}
+      <a href="{{ site.url }}//" class="btn">&laquo; Home</a>
+      {% endif %}
+      <a href="https://github.com/shagu{{ page.url }}" class="btn"><svg height="12" class="octicon octicon-mark-github" viewBox="0 0 16 16" version="1.1" width="12" aria-hidden="true">
+          <path fill-rule="evenodd"
+            d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z">
+          </path>
+        </svg> GitHub</a>
+    </nav>
+  </div>
 
-    <div class="wrapper">
+  <div class="wrapper">
 
-      <section>
+    <section>
 
-        {{ content }}
+      {{ content }}
 
-      </section>
+    </section>
 
-    </div>
+  </div>
 
-    {% if site.google_analytics %}
-      <script type="text/javascript">
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create', '{{ site.google_analytics }}', 'auto');
-        ga('send', 'pageview');
-      </script>
-    {% endif %}
-  </body>
+  {% if site.google_analytics %}
+  <script type="text/javascript">
+    (function(i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function() {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    ga('create', '{{ site.google_analytics }}', 'auto');
+    ga('send', 'pageview');
+  </script>
+  {% endif %}
+</body>
+
 </html>
