--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,6 +86,10 @@
       font-style: normal;
       color: #cccccc;
     }
+
+    section img {
+      vertical-align: middle;
+    }
   </style>
 </head>
 
