layout: set maximum logo size

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,7 +96,7 @@
 <body>
   <div id="header">
     <nav>
-      <a href="{{ site.url }}//" style="float:right;"><img src='https://raw.githubusercontent.com/shagu/{{ site.github.repository_name }}/master/_layouts/logo.png'></a>
+      <a href="{{ site.url }}//" style="float:right;"><img style="max-width: 30vw;" src='https://raw.githubusercontent.com/shagu/{{ site.github.repository_name }}/master/_layouts/logo.png'></a>
       {% if page.url != '/' %}
       <a href="{{ site.url }}//" class="btn">&laquo; Home</a>
       {% endif %}
